syntax = "proto3";

option go_package = "github.com/nandonyata/Clement-Jean-grpc-Udemy/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
}